--- a/html_examples/portfolio/toplist/index.html
+++ b/html_examples/portfolio/toplist/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"></link>
 	</head>
 	<body>
-		<div class="title">My App</div>
+		<h1 class="title">My App</h1>
 		<div class="app">
 			<div class="screenshot">image</div>
 		    <div class="description">text</div>
