moved image to new img dir

--- a/html_examples/portfolio/toplist/index.html
+++ b/html_examples/portfolio/toplist/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1 class="title">My App</h1>
 		<div class="app">
-			<div class="screenshot"><img src="app.png" alt="This is a screenshot"/></div>
+			<div class="screenshot"><img src="img/app.png" alt="This is a screenshot"/></div>
 		    <div class="description">text</div>
 		</div>
 	</body>
