--- a/html_examples/portfolio/toplist/index.html
+++ b/html_examples/portfolio/toplist/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css"></link>
+		<title>My App</title>
+		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
 		<h1 class="title">My App</h1>
