--- a/html_examples/portfolio/framework/test.html
+++ b/html_examples/portfolio/framework/test.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Framework Test page</title>
+	<!-- 
+	use normalize.css to make css cross browser compatible
+	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn.trunk/normalize.css">
+	 -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
