added example of using Google Fonts

--- a/html_examples/portfolio/framework/test.html
+++ b/html_examples/portfolio/framework/test.html
@@ -7,12 +7,17 @@
 	use normalize.css to make css cross browser compatible
 	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn.trunk/normalize.css">
 	 -->
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
 	<div class="grid">
 
+		<div class="row">
+			<h1>Header in Google Font</h1>
+		</div>
+		
 		<div class="row">
 			<div class="col-2">2 Columns</div>
 			<div class="col-10 end">
