--- a/html_examples/portfolio/bootstrap-prestructure/bootstrap-prestructure.htm
+++ b/html_examples/portfolio/bootstrap-prestructure/bootstrap-prestructure.htm
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-      <img src="./bootstrap-prestructure_files/1140x350">
+      <img class="img-responsive" src="./bootstrap-prestructure_files/1140x350">
       </div>
     </div>
     <div class="row">
