added description of the behavior

--- a/html_examples/common_responsive_patterns/column_drop.html
+++ b/html_examples/common_responsive_patterns/column_drop.html
@@ -24,6 +24,9 @@
     </style>
   </head>
   <body>
+    <h1>Column Drop</h1>
+    <p>These boxes will shown in a single column at the smallest screen width and a single row at the largest screen width.</p>
+    <p>They gradually transition between the layouts.</p>
     <div class="container">
   	<div class="box dark-blue"></div>
   	<div class="box light-blue"></div>
