added unicode smiley and zocial font icons

--- a/html_examples/Project-Part-2-Start/index.html
+++ b/html_examples/Project-Part-2-Start/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  
+  <meta charset="utf-8">
+  
   <meta name="description" content="Udacity Responsive Images course project" />
   <meta name="author" content="//samdutton.com">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
@@ -13,8 +15,7 @@
   <base target="_blank">
 
   <title>My responsive blog: picture story</title>
-
-  <link rel="icon" sizes="192x192" href="/images/icon.png">
+  <link rel="icon" sizes="192x192" href="images/icon.png">
   <link rel="stylesheet" href="css/main.css" />
 
   <!-- loads the Udacity Feedback extension -->
@@ -32,7 +33,7 @@
 
     <h2>My story</h2>
 
-    <p>I love cheese, especially manchego swiss. <img src="images_src/fixed/smiley_face.png"> Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
+    <p>I love cheese, especially manchego swiss. &#128522; Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
     
     <figure>
       <img src="images/horses-1600_large_2x.jpg">
@@ -93,10 +94,12 @@
   
   </article>
 
-  <img style="max-width: 100%" src="images_src/fixed/flourish.png">
-  <!--
-  Flourish credit: http://pixabay.com/en/flourish-line-border-decoration-31609/
-  -->
+  <div>
+    <a class="zocial-twitter">Twitter</a>
+    <a class="zocial-digg">Digg</a>
+    <a class="zocial-facebook">Facebook</a>
+    <a class="zocial-googleplus">Google Plus</a>
+  </div>
 
   <br>
   <a href="//github.com/udacity/responsive-images/tree/master/project/start" title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
