added media to picture to show cropped image at less than 500px

--- a/html_examples/Project-Part-3-Start/index.html
+++ b/html_examples/Project-Part-3-Start/index.html
@@ -39,7 +39,8 @@
   <article>
 
     <picture>
-      <source srcset="images/still_life-800_large_1x.jpg 1x, images/still_life-1600_large_2x.jpg 2x"/>
+      <source media="(max-width: 500px)" srcset="images/still_life-crop-800_small_1x.jpg 1x, images/still_life-crop-1600_small_2x.jpg 2x"/>
+      <source media="(min-width: 501px)" srcset="images/still_life-800_large_1x.jpg 1x, images/still_life-1600_large_2x.jpg 2x"/>
       <img src="images/still_life-1600_large_2x.jpg" alt="">
     </picture>
 
@@ -49,7 +50,8 @@
 
     <figure>
       <picture>
-        <source srcset="images/horses-800_large_1x.jpg 1x, images/horses-1600_large_2x.jpg 2x"/>
+        <source media="(max-width: 500px)" srcset="images/horses-crop-800_small_1x.jpg 1x, images/horses-crop-1600_small_2x.jpg 2x"/>
+        <source media="(min-width: 501px)" srcset="images/horses-800_large_1x.jpg 1x, images/horses-1600_large_2x.jpg 2x"/>
         <img src="images/horses-1600_large_2x.jpg" alt="">
       </picture>
       <figcaption>Horses in Hawaii</figcaption>
@@ -61,7 +63,8 @@
 
     <figure>
    	  <picture>
-   	    <source srcset="images/volt-800_large_1x.jpg 1x, images/volt-1600_large_2x.jpg 2x"/>
+   	    <source media="(max-width: 500px)" srcset="images/volt-crop-800_small_1x.jpg 1x, images/volt-crop-1600_small_2x.jpg 2x"/>
+   	    <source media="(min-width: 501px)" srcset="images/volt-800_large_1x.jpg 1x, images/volt-1600_large_2x.jpg 2x"/>
         <img src="images/volt-1600_large_2x.jpg" alt="">
       </picture>
       <figcaption>Sign in an old Berlin power station</figcaption>
@@ -72,7 +75,8 @@
 
     <figure>
       <picture>
-        <source srcset="images/cockatoos-1600_large_1x.jpg 1x, images/cockatoos-1600_large_2x.jpg 2x"/>
+        <source media="(max-width: 500px)" srcset="images/cockatoos-crop-800_small_1x.jpg 1x, images/cockatoos-crop-1600_small_2x.jpg 2x"/>
+        <source media="(min-width: 501px)" srcset="images/cockatoos-800_large_1x.jpg 1x, images/cockatoos-1600_large_2x.jpg 2x"/>
         <img src="images/cockatoos-1600_large_2x.jpg" alt="">
       </picture>
       <figcaption>Cockatoos</figcaption>
@@ -88,7 +92,8 @@
 
     <figure>
       <picture>
-        <source srcset="images/postcard-800_large_1x.jpg 1x, images/postcard-1600_large_2x.jpg 2x"/>
+        <source media="(max-width: 500px)" srcset="images/postcard-crop-800_small_1x.jpg 1x, images/postcard-crop-1600_small_2x.jpg 2x"/>
+        <source media="(min-width: 501px)" srcset="images/postcard-800_large_1x.jpg 1x, images/postcard-1600_large_2x.jpg 2x"/>
         <img src="images/postcard-1600_large_2x.jpg" alt="">
       </picture>
       <figcaption>French postcard from 25 November 1914</figcaption>
@@ -99,7 +104,8 @@
 
     <figure>
       <picture>
-        <source srcset="images/grasshopper-800_large_1x.jpg 1x, images/grasshopper-1600_large_2x.jpg 2x"/>
+        <source media="(max-width: 500px)" srcset="images/grasshopper-crop-800_small_1x.jpg 1x, images/grasshopper-crop-1600_small_2x.jpg 2x"/>
+        <source media="(min-width: 501px)" srcset="images/grasshopper-800_large_1x.jpg 1x, images/grasshopper-1600_large_2x.jpg 2x"/>
         <img src="images/grasshopper-1600_large_2x.jpg" alt="">
       </picture>
       <figcaption>Grasshopper on an Akubra hat</figcaption>
@@ -110,7 +116,8 @@
 
     <figure>
       <picture>
-        <source srcset="images/sfo-1600_large_2x.jpg 2x"/>
+        <source media="(max-width: 500px)" srcset="images/sfo-crop-800_small_1x.jpg 1x, images/sfo-crop-1600_small_2x.jpg 2x"/>
+        <source media="(min-width: 501px)" srcset="images/sfo-800_large_1x.jpg 1x, images/sfo-1600_large_2x.jpg 2x"/>
         <img src="images/sfo-1600_large_2x.jpg" alt="">
       </picture>
       <figcaption>Near SFO</figcaption>
@@ -120,7 +127,8 @@
 
     <figure>
       <picture>
-        <source srcset="images/rosella-1600_large_2x.jpg 2x"/>
+        <source media="(max-width: 500px)" srcset="images/rosella-crop-1600_small_1x.jpg 1x, images/rosella-crop-1600_small_2x.jpg 2x"/>
+        <source media="(min-width: 501px)" srcset="images/rosella-1600_large_1x.jpg 1x, images/rosella-1600_large_2x.jpg 2x"/>
         <img src="images/rosella-1600_large_2x.jpg" alt="">
       </picture>
       <figcaption>Australian rosella</figcaption>
