added alt text to all pictures

--- a/html_examples/Project-Part-3-Start/index.html
+++ b/html_examples/Project-Part-3-Start/index.html
@@ -41,7 +41,7 @@
     <picture>
       <source media="(max-width: 500px)" srcset="images/still_life-crop-800_small_1x.jpg 1x, images/still_life-crop-1600_small_2x.jpg 2x"/>
       <source media="(min-width: 501px)" srcset="images/still_life-800_large_1x.jpg 1x, images/still_life-1600_large_2x.jpg 2x"/>
-      <img src="images/still_life-1600_large_2x.jpg" alt="">
+      <img src="images/still_life-1600_large_2x.jpg" alt="still life of flowers and fruit">
     </picture>
 
     <h2>My story</h2>
@@ -52,7 +52,7 @@
       <picture>
         <source media="(max-width: 500px)" srcset="images/horses-crop-800_small_1x.jpg 1x, images/horses-crop-1600_small_2x.jpg 2x"/>
         <source media="(min-width: 501px)" srcset="images/horses-800_large_1x.jpg 1x, images/horses-1600_large_2x.jpg 2x"/>
-        <img src="images/horses-1600_large_2x.jpg" alt="">
+        <img src="images/horses-1600_large_2x.jpg" alt="horses in a green pasture">
       </picture>
       <figcaption>Horses in Hawaii</figcaption>
     </figure>
@@ -65,7 +65,7 @@
    	  <picture>
    	    <source media="(max-width: 500px)" srcset="images/volt-crop-800_small_1x.jpg 1x, images/volt-crop-1600_small_2x.jpg 2x"/>
    	    <source media="(min-width: 501px)" srcset="images/volt-800_large_1x.jpg 1x, images/volt-1600_large_2x.jpg 2x"/>
-        <img src="images/volt-1600_large_2x.jpg" alt="">
+        <img src="images/volt-1600_large_2x.jpg" alt="sign that reads volt">
       </picture>
       <figcaption>Sign in an old Berlin power station</figcaption>
     </figure>
@@ -77,7 +77,7 @@
       <picture>
         <source media="(max-width: 500px)" srcset="images/cockatoos-crop-800_small_1x.jpg 1x, images/cockatoos-crop-1600_small_2x.jpg 2x"/>
         <source media="(min-width: 501px)" srcset="images/cockatoos-800_large_1x.jpg 1x, images/cockatoos-1600_large_2x.jpg 2x"/>
-        <img src="images/cockatoos-1600_large_2x.jpg" alt="">
+        <img src="images/cockatoos-1600_large_2x.jpg" alt="pair of cockatoos">
       </picture>
       <figcaption>Cockatoos</figcaption>
     </figure>
@@ -94,7 +94,7 @@
       <picture>
         <source media="(max-width: 500px)" srcset="images/postcard-crop-800_small_1x.jpg 1x, images/postcard-crop-1600_small_2x.jpg 2x"/>
         <source media="(min-width: 501px)" srcset="images/postcard-800_large_1x.jpg 1x, images/postcard-1600_large_2x.jpg 2x"/>
-        <img src="images/postcard-1600_large_2x.jpg" alt="">
+        <img src="images/postcard-1600_large_2x.jpg" alt="vintage postcard">
       </picture>
       <figcaption>French postcard from 25 November 1914</figcaption>
     </figure>
@@ -106,7 +106,7 @@
       <picture>
         <source media="(max-width: 500px)" srcset="images/grasshopper-crop-800_small_1x.jpg 1x, images/grasshopper-crop-1600_small_2x.jpg 2x"/>
         <source media="(min-width: 501px)" srcset="images/grasshopper-800_large_1x.jpg 1x, images/grasshopper-1600_large_2x.jpg 2x"/>
-        <img src="images/grasshopper-1600_large_2x.jpg" alt="">
+        <img src="images/grasshopper-1600_large_2x.jpg" alt="small grasshopper">
       </picture>
       <figcaption>Grasshopper on an Akubra hat</figcaption>
     </figure>
@@ -118,7 +118,7 @@
       <picture>
         <source media="(max-width: 500px)" srcset="images/sfo-crop-800_small_1x.jpg 1x, images/sfo-crop-1600_small_2x.jpg 2x"/>
         <source media="(min-width: 501px)" srcset="images/sfo-800_large_1x.jpg 1x, images/sfo-1600_large_2x.jpg 2x"/>
-        <img src="images/sfo-1600_large_2x.jpg" alt="">
+        <img src="images/sfo-1600_large_2x.jpg" alt="picture taken from airplane">
       </picture>
       <figcaption>Near SFO</figcaption>
     </figure>
@@ -129,7 +129,7 @@
       <picture>
         <source media="(max-width: 500px)" srcset="images/rosella-crop-1600_small_1x.jpg 1x, images/rosella-crop-1600_small_2x.jpg 2x"/>
         <source media="(min-width: 501px)" srcset="images/rosella-1600_large_1x.jpg 1x, images/rosella-1600_large_2x.jpg 2x"/>
-        <img src="images/rosella-1600_large_2x.jpg" alt="">
+        <img src="images/rosella-1600_large_2x.jpg" alt="rosella in bloom">
       </picture>
       <figcaption>Australian rosella</figcaption>
     </figure>
