updated cat clicker to display 2 cats.

--- a/cat_clicker/cat_clicker.html
+++ b/cat_clicker/cat_clicker.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="css/cat_clicker.css">
     </head>
     <body>
-        <div id="count">0</div>
-        <img id="cat" src="img/cat.jpeg"/>
+        <div id="main"></div>
     </body>
 </html>
