scaled up to 5 cats.

--- a/cat_clicker/cat_clicker.html
+++ b/cat_clicker/cat_clicker.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="css/cat_clicker.css">
     </head>
     <body>
-        <div id="main"></div>
+        <div id="container">
+            <div id="list-container">
+                <select id="list" multiple="true"></select>
+            </div>
+            <div id="main"></div>
+        </div>
     </body>
 </html>
